--- a/leetCode.ipynb
+++ b/leetCode.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,18 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 4
     }
    ],
    "source": [
