--- a/leetCode.ipynb
+++ b/leetCode.ipynb
@@ -1,37 +1,20 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.2-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "Python 3.8.2 64-bit",
-   "display_name": "Python 3.8.2 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-    }
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "##Isomorphic arrays\n",
-    "# Given two strings s and t, determine if they are isomorphic. Two strings are isomorphic if the characters in s can be replaced to get t.\n",
-    "# for example, s = \"egg\" and t=\"add\" returns true, but \"foo\" and \"bar\" is false\n",
-    "\n",
+    "Isomorphic arrays\n",
+    "Given two strings s and t, determine if they are isomorphic. Two strings are isomorphic if the characters in s can be replaced to get t.\n",
+    "for example, s = \"egg\" and t=\"add\" returns true, but \"foo\" and \"bar\" is false\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def isIsomorphic(s: str, t: str) -> bool:\n",
     "    map = {}\n",
     "    tmap = []\n",
@@ -44,26 +27,22 @@
     "    if len(tmap) > len(set(tmap)):\n",
     "        return False\n",
     "    return True"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "True"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 8
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -77,5 +56,26 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
