--- a/leetCode.ipynb
+++ b/leetCode.ipynb
@@ -416,6 +416,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def runningSum(nums: List[int]) -> List[int]:\n",
+    "    sum = [0] * len(nums)\n",
+    "    total = 0\n",
+    "    for num in range(len(nums)):\n",
+    "        sum[num] = total + nums[num]\n",
+    "        total = sum[num]\n",
+    "    return sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 6, 10]"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "runningSum([1,2,3,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
