--- a/leetCode.ipynb
+++ b/leetCode.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,6 +1231,111 @@
     "    else:\n",
     "        l1.next = self.mergeTwoLists(l1.next, l2)\n",
     "        return l1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Relative Sort Array\n",
+    "Given two arrays arr1 and arr2, the elements of arr2 are distinct, and all elements in arr2 are also in arr1.\n",
+    "\n",
+    "Sort the elements of arr1 such that the relative ordering of items in arr1 are the same as in arr2.  Elements that don't appear in arr2 should be placed at the end of arr1 in ascending order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-48-c867087fd4d2>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-48-c867087fd4d2>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return (arr1, key = lambda x: arr2.index(x) if x in arr2 else len(arr2)+x)\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def relativeSortArray(self, arr1: List[int], arr2: List[int]) -> List[int]:\n",
+    "    return (arr1, key = lambda x: arr2.index(x) if x in arr2 else len(arr2)+x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K-diff Pairs in an Array\n",
+    "Given an array of integers nums and an integer k, return the number of unique k-diff pairs in the array.\n",
+    "\n",
+    "A k-diff pair is an integer pair (nums[i], nums[j]), where the following are true:\n",
+    "\n",
+    "0 <= i < j < nums.length\n",
+    "|nums[i] - nums[j]| == k\n",
+    "Notice that |val| denotes the absolute value of val.\n",
+    "\n",
+    " \n",
+    "Example 1:\n",
+    "\n",
+    "Input: nums = [3,1,4,1,5], k = 2\n",
+    "Output: 2\n",
+    "Explanation: There are two 2-diff pairs in the array, (1, 3) and (3, 5).\n",
+    "Although we have two 1s in the input, we should only return the number of unique pairs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findPairs(self, nums: List[int], k: int) -> int:\n",
+    "    if k < 0: return 0\n",
+    "    result, lookup = set(), set()\n",
+    "    for num in nums:\n",
+    "        if num-k in lookup:\n",
+    "            result.add(num-k)\n",
+    "        if num+k in lookup:\n",
+    "            result.add(num)\n",
+    "        lookup.add(num)\n",
+    "    return len(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rank Transform of an Array\n",
+    "Given an array of integers arr, replace each element with its rank.\n",
+    "\n",
+    "The rank represents how large the element is. The rank has the following rules:\n",
+    "\n",
+    "Rank is an integer starting from 1.\n",
+    "The larger the element, the larger the rank. If two elements are equal, their rank must be the same.\n",
+    "Rank should be as small as possible.\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: arr = [40,10,20,30]\n",
+    "Output: [4,1,2,3]\n",
+    "Explanation: 40 is the largest element. 10 is the smallest. 20 is the second smallest. 30 is the third smallest.\n",
+    "Example 2:\n",
+    "\n",
+    "Input: arr = [100,100,100]\n",
+    "Output: [1,1,1]\n",
+    "Explanation: Same elements share the same rank."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def arrayRankTransform(self, arr: List[int]) -> List[int]:\n",
+    "        return map({x:i+1 for i,x in enumerate(sorted(set(arr)))}.get,arr)"
    ]
   },
   {
