--- a/leetCode.ipynb
+++ b/leetCode.ipynb
@@ -1595,14 +1595,12 @@
    "source": [
     "### Longest Substring Without Repeating Characters\n",
     "Given a string s, find the length of the longest substring without repeating characters.\n",
-    "\n",
     " \n",
     "\n",
-    "Example 1:\n",
-    "\n",
-    "Input: s = \"abcabcbb\"\n",
-    "Output: 3\n",
-    "Explanation: The answer is \"abc\", with the length of 3."
+    "You check for each character if it is the first time you have seen it. If it is the first time, you store it in the set. If it is not the first time, you skip it.\n",
+    "start = chars[s[i]]+1\n",
+    "else: mx = max(mx, i-start+1)\n",
+    "return mx"
    ]
   },
   {
@@ -1629,7 +1627,8 @@
    "metadata": {},
    "source": [
     "### Longest Palindromic Substring\n",
-    "Given a string s, return the longest palindromic substring in s."
+    "Given a string s, return the longest palindromic substring in s.\n",
+    "you define a function to check for the left and right boundary of all of the palindromic substrings. You sort what this function returns: check(i,i) + check(i,i+1) if s[i] == s[i+1]. Then return the longest by sorting the list. sorted(pals, key=len)[-1]."
    ]
   },
   {
@@ -1670,8 +1669,8 @@
    "outputs": [],
    "source": [
     "def maxArea(height:List[int]) -> int:\n",
-    "     \n",
-    "    \n",
+    "     l,r = 0, len(s)-1\n",
+    "    mx = 0\n",
     "    while l < r:\n",
     "        mx = max(mx, (r - l) * min(height(l),height(r)))\n",
     "        \n",
